--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 MONGO_DB_URL=mongodb+srv://substring:substring@cluster0.zp6k6gl.mongodb.net/
 BASE_URL=http://localhost:8080
+BCRYPT=10
+JWT_key='pdmksdfm'
