--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
     "next": "13.4.19",
     "postcss": "8.4.29",
